src/index.css
@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Cinzel:wght@400..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Space+Grotesk:wght@300..700&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap');

@variant dark (&:where(.dark, .dark *));

@import "tailwindcss";

/* 1. Map your custom variables to the new Tailwind v4 @theme engine */
@theme {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-aboutForeground: var(--aboutForeground);
  --color-surface: var(--surface);
  --color-border: var(--border);
  --color-primary: var(--primary);
  --font-heading: 'Lato', serif;
  --font-para: 'Poppins', sans-serif;
}

/* 2. Define standard CSS variables and universal styles */
@layer base {

  /* LIGHT MODE (The Default) */
  :root {
    --background: #ffffff;
    --foreground: #171717;
    --aboutForeground: #171717;
    --surface: #dcdbdb;
    --border: #e5e5e5;
    --primary: #0a0a0a;
    /* Sky Blue Ripple Colors */
    --ripple-border: rgba(59, 130, 246, 0.3);
    --ripple-fill: rgba(14, 165, 233, 0.4);
  }

  /* DARK MODE (The Soft Black Aesthetic) */
  .dark {
    --background: #0a0a0a;
    /* Level 3: Soft White for all body text (Slate-200) */
    --foreground: #e2e8f0;
    --aboutForeground: #fff;
    --surface: #171717;
    --border: #262626;
    --primary: #ffffff;

    /* Peak Brightness Ripple */
    --ripple-border: rgba(255, 255, 255,0);
    --ripple-fill: rgba(0, 0, 0, 1);
  }

  /* Universal CSS */
  * {
    /* Tailwind's engine does this automatically, but you can enforce it here */
    box-sizing: border-box;
    border-color: var(--border);
  }

  html {
    scroll-behavior: smooth;
    font-size: 115%;
  }

  body {
    background-color: var(--background);
    color: var(--foreground);
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-family: 'Poppins', sans-serif;
  }
}

@theme inline {
  --animate-cell-ripple: cell-ripple var(--duration, 200ms) ease-out none 1 var(--delay, 0ms);

  @keyframes cell-ripple {
    0% {
      opacity: 0.4;
    }

    50% {
      opacity: 0.8;
    }

    100% {
      opacity: 0.4;
    }
  }
}

